Bug 316174 - Messages are sent with an extra end of line
Summary: Messages are sent with an extra end of line
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: git-latest
Platform: Other Linux
: NOR normal
Target Milestone: 0.6.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-05 13:56 UTC by Daniele E. Domenichelli
Modified: 2013-03-06 13:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniele E. Domenichelli 2013-03-05 13:56:35 UTC
See: http://wstaw.org/m/2013/03/05/snapshot122.png
Both sides see the extra line, so it is sent together with the message.
Comment 1 David Edmundson 2013-03-05 20:23:24 UTC
Git bisected, regression is caused by the input handling changes.
Comment 2 David Edmundson 2013-03-06 13:00:09 UTC
Git commit 9140828cce75056f8cb17a5cd354babdf34c10bd by David Edmundson.
Committed on 06/03/2013 at 03:55.
Pushed by davidedmundson into branch 'master'.

Stop new lines appearing on sending messages

REVIEW: 109308

M  +1    -1    lib/chat-widget.cpp

http://commits.kde.org/telepathy-text-ui/9140828cce75056f8cb17a5cd354babdf34c10bd