Stop new lines appearing on sending messages

REVIEW: 109308
BUG: 316174